# PowerScope

./: .gitignore  CMakeLists.txt  CONTEXT.md  README.md  build.ps1
src/: dashboard.cpp  dashboard.h  diagnostics.cpp  diagnostics.h  main.cpp  monitoring_session.cpp  monitoring_session.h  powerscope_types.h  terminal_renderer.cpp  terminal_renderer.h  windows_probes.cpp  windows_probes.h
tests/: powerscope_tests.cpp
